@@ -4,6 +4,7 @@ import com.blog.blogbackend.dto.CommentRequest;
 import com.blog.blogbackend.dto.CommentResponse;
 import com.blog.blogbackend.entity.Comment;
 import com.blog.blogbackend.entity.CommentLike;
+import com.blog.blogbackend.dto.UserSummaryResponse;
 import com.blog.blogbackend.entity.NotificationType;
 import com.blog.blogbackend.entity.Post;
 import com.blog.blogbackend.entity.PostStatus;
@@ -13,42 +14,39 @@ import com.blog.blogbackend.repository.CommentLikeRepository;
 import com.blog.blogbackend.repository.CommentRepository;
 import com.blog.blogbackend.repository.PostRepository;
 import com.blog.blogbackend.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CommentService {
+    private static final String USER_NOT_FOUND = "User not found";
 
-    @Autowired
-    private CommentRepository commentRepository;
-
-    @Autowired
-    private PostRepository postRepository;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private NotificationService notificationService;
-
-    @Autowired
-    private CommentLikeRepository commentLikeRepository;
+    private final CommentRepository commentRepository;
+    private final PostRepository postRepository;
+    private final UserRepository userRepository;
+    private final NotificationService notificationService;
+    private final CommentLikeRepository commentLikeRepository;
 
     @Transactional
     public CommentResponse addComment(UUID postId, CommentRequest request) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
-        Post post = postRepository.findById(postId).orElseThrow(() -> new RuntimeException("Post not found"));
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, USER_NOT_FOUND));
+        Post post = postRepository.findById(postId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Post not found"));
         if (post.getStatus() != PostStatus.PUBLISHED) {
-            throw new RuntimeException("Cannot comment on unpublished post");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Cannot comment on unpublished post");
         }
 
         Comment comment = Comment.builder()
@@ -58,9 +56,9 @@ public class CommentService {
                 .build();
 
         if (request.getParentId() != null) {
-            Comment parent = commentRepository.findById(request.getParentId()).orElseThrow(() -> new RuntimeException("Parent comment not found"));
+            Comment parent = commentRepository.findById(request.getParentId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Parent comment not found"));
             if (!parent.getPost().getId().equals(postId)) {
-                throw new RuntimeException("Parent comment does not belong to this post");
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Parent comment does not belong to this post");
             }
             comment.setParent(parent);
         }
@@ -73,8 +71,9 @@ public class CommentService {
     @Transactional
     public void toggleLike(UUID commentId) {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        User user = userRepository.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
-        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new RuntimeException("Comment not found"));
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, USER_NOT_FOUND));
+        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Comment not found"));
 
         commentLikeRepository.findByCommentIdAndUserId(commentId, user.getId())
                 .ifPresentOrElse(
@@ -92,10 +91,21 @@ public class CommentService {
                 .map(comment -> mapToResponseWithReplies(comment, currentUser));
     }
 
+    public List<UserSummaryResponse> getCommentLikes(UUID commentId) {
+        return commentLikeRepository.findTop20ByCommentIdOrderByCreatedAtDesc(commentId).stream()
+                .map(like -> UserSummaryResponse.builder()
+                        .id(like.getUser().getId())
+                        .displayName(like.getUser().getDisplayName())
+                        .avatarUrl(like.getUser().getAvatarUrl())
+                        .build())
+                .collect(Collectors.toList());
+    }
+
     public void deleteComment(UUID id) {
-        Comment comment = commentRepository.findById(id).orElseThrow(() -> new RuntimeException("Comment not found"));
+        Comment comment = commentRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Comment not found"));
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        User currentUser = userRepository.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
+        User currentUser = userRepository.findByEmail(email)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, USER_NOT_FOUND));
 
         boolean isAuthorOfPost = comment.getPost().getAuthor().getId().equals(currentUser.getId());
         boolean isAuthorOfComment = comment.getUser().getId().equals(currentUser.getId());
@@ -104,7 +114,7 @@ public class CommentService {
         if (isAuthorOfPost || isAuthorOfComment || isAdmin) {
             commentRepository.delete(comment);
         } else {
-            throw new RuntimeException("Unauthorized");
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Unauthorized");
         }
     }
 
@@ -126,7 +136,7 @@ public class CommentService {
         List<Comment> replies = commentRepository.findByParentId(comment.getId());
         response.setReplies(replies.stream()
                 .map(reply -> mapToResponseWithReplies(reply, currentUser))
-                .collect(Collectors.toList()));
+                .toList());
         return response;
     }
 
